--- a/VisualStudio2013-Update1/VisualStudio2013-Update1.nuspec
+++ b/VisualStudio2013-Update1/VisualStudio2013-Update1.nuspec
@@ -2,11 +2,12 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>visualstudio2013-update1</id>
-    <version>1.0.1</version>
+    <version>1.0.2</version>
     <title>Visual Studio 2013 Update 1</title>
     <authors>Microsoft</authors>
     <owners>Bryan Matthews</owners>
     <projectUrl>http://www.microsoft.com/en-us/download/details.aspx?id=41650</projectUrl>
+	<iconUrl>https://raw.githubusercontent.com/mattheyan/Chocolatey-Packages/master/Icons/VisualStudio2013.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Visual Studio 2013 Update 1</description>
 	<tags>Microsoft Visual Studio 2013 VS VS2013 VSUpdate IDE ALM</tags>
