--- a/VisualStudio2013-Update2/VisualStudio2013-Update2.nuspec
+++ b/VisualStudio2013-Update2/VisualStudio2013-Update2.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>visualstudio2013-update2</id>
-    <version>1.0.2-rc</version>
+    <version>1.0.3-rc</version>
     <title>Visual Studio 2013 Update 2</title>
     <authors>Microsoft</authors>
     <owners>Bryan Matthews</owners>
@@ -13,6 +13,6 @@
 	<dependencies>
         <dependency id="visualstudio2013-update1" />
     </dependencies>
-	<tags>Microsoft Visual Studio 2013 VS VS2013 VSUpdate IDE ALM</tags>
+	<tags>Microsoft Visual Studio 2013 update 2 VS VS2013 VSUpdate IDE ALM</tags>
   </metadata>
 </package>
