--- a/BalsamiqMockups.Install/BalsamiqMockups.Install.nuspec
+++ b/BalsamiqMockups.Install/BalsamiqMockups.Install.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>balsamiqmockups.install</id>
     <title>Balsamiq Mockups for Desktop</title>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <authors>Balsamiq Studios</authors>
     <owners>Bryan Matthews</owners>
     <summary>Balsamiq is a wireframing and mock up tool with a high focus on usability. Quickly come up with mock ups and easily share them with your clients.</summary>
@@ -13,6 +13,7 @@ Balsamiq is a wireframing and mock up tool with a high focus on usability. Quick
 For questions about this package, please leave a comment on the package page at https://chocolatey.org/packages/balsamiqmockups.install, or create an issue on Github at https://github.com/mattheyan/Chocolatey-Packages/issues.
 </description>
     <projectUrl>http://balsamiq.com/products/mockups/</projectUrl>
+	<iconUrl>https://raw.githubusercontent.com/mattheyan/Chocolatey-Packages/master/Icons/BalsamiqMockups.png</iconUrl>
     <tags>balsamiq mockups prototypes prototyping</tags>
     <copyright>2014 Balsamiq Studios, LLC</copyright>
     <licenseUrl>http://support.balsamiq.com/customer/portal/articles/127432</licenseUrl>
