--- a/BalsamiqMockups3/BalsamiqMockups3.nuspec
+++ b/BalsamiqMockups3/BalsamiqMockups3.nuspec
@@ -1,33 +1,28 @@
 <?xml version="1.0"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <id>balsamiqmockups3</id>
+    <id>{{PackageName}}</id>
+    <version>{{PackageVersion}}</version>
     <title>Balsamiq Mockups for Desktop</title>
-    <version>3.0.1</version>
     <authors>Balsamiq Studios</authors>
-    <owners>Bryan Matthews</owners>
-    <summary>Balsamiq is a wireframing and mock up tool with a high focus on usability. Quickly come up with mock ups and easily share them with your clients.</summary>
-    <description>
-Balsamiq is a wireframing and mock up tool with a high focus on usability. Quickly come up with mock ups and easily share them with your clients.
+    <owners>Bryan Matthews, d.hilgarth</owners>
+    <licenseUrl>http://support.balsamiq.com/customer/portal/articles/127432</licenseUrl>
+    <projectUrl>http://balsamiq.com/products/mockups/</projectUrl>
+    <iconUrl>https://raw.githubusercontent.com/mattheyan/Chocolatey-Packages/master/Icons/BalsamiqMockups.png</iconUrl>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
+    <description>Balsamiq is a wireframing and mock up tool with a high focus on usability. Quickly come up with mock ups and easily share them with your clients.
 
 Because Balsamiq is commercial software, this package will install Balsamiq as a fully-functional trial. If you have a license key you can activate the software after install.
 
 This package is specific to version 3 of Balsamiq Mockups for Desktop. If you need version 2, check out the [version 2 package](https://chocolatey.org/packages/balsamiqmockups.install).
 
-For questions about this package, please leave a comment on the package page at https://chocolatey.org/packages/balsamiqmockups3 or create an issue on Github at https://github.com/mattheyan/Chocolatey-Packages/issues.
-</description>
-    <projectUrl>http://balsamiq.com/products/mockups/</projectUrl>
-    <iconUrl>https://raw.githubusercontent.com/mattheyan/Chocolatey-Packages/master/Icons/BalsamiqMockups.png</iconUrl>
-    <tags>balsamiq mockups prototypes prototyping trial</tags>
+For questions about this package, please leave a comment on the package page at https://chocolatey.org/packages/balsamiqmockups3 or create an issue on Github at https://github.com/mattheyan/Chocolatey-Packages/issues.</description>
+    <summary>Balsamiq is a wireframing and mock up tool with a high focus on usability. Quickly come up with mock ups and easily share them with your clients.</summary>
+    <releaseNotes></releaseNotes>
     <copyright>2015 Balsamiq Studios, LLC</copyright>
-    <licenseUrl>http://support.balsamiq.com/customer/portal/articles/127432</licenseUrl>
-    <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <releaseNotes>
-# [3.0.1] - 2015-03-10
-
-## First release of major version 3
-
-[Announcement](http://blogs.balsamiq.com/product/2015/03/10/b3/)
-    </releaseNotes>
+    <tags>balsamiq mockups prototypes prototyping trial</tags>
   </metadata>
+  <files>
+    <file src="tools\**" target="tools" />
+  </files>
 </package>
